--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,10 +3,13 @@ Type: Package
 Version: 0.1
 Title: Derive Psytools task data 
 Description: Derive Psytools task data in CSV files
-    exported from the Delosis server
+    exported from the Delosis server.
 Authors@R: c(
     person("John", "Rogers", email = "github@delosis.com", role = c("cre", "aut")),
     person("Dimitri", "Papadopoulos", email = "imagendatabase@cea.fr", role = "ctb"))
+Author: John Rogers [cre, aut],
+    Dimitri Papadopoulos [ctb]
+Maintainer: John Rogers <github@delosis.com>
 URL: https://github.com/delosis/psytools
 License: GPL-3
 Imports:
