--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,4 +11,5 @@ export(deriveBART)
 export(deriveERT)
 export(deriveKIRBY)
 export(rotateQuestionnaire)
+importFrom(dplyr,recode)
 importFrom(reshape2,dcast)
