Function recode is the one in "car" - not "dplyr"

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,5 @@ export(deriveBART)
 export(deriveERT)
 export(deriveKIRBY)
 export(rotateQuestionnaire)
-importFrom(dplyr,recode)
+importFrom(car,recode)
 importFrom(reshape2,dcast)
