--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,5 +11,6 @@ export(deriveSST)
 export(deriveTMT)
 export(deriveWCST)
 export(rotateQuestionnaire)
+export(rotateQuestionnairePreserveBlock)
 importFrom(car,recode)
 importFrom(reshape2,dcast)
