--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,5 +12,6 @@ export(deriveTMT)
 export(deriveWCST)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
+export(sanityCheck)
 importFrom(car,recode)
 importFrom(reshape2,dcast)
