Updated to support IMAGEN NB These functions must be called after iteration selection to preserve SPSS functionality

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,13 +4,19 @@ export(deriveBART)
 export(deriveCORSI)
 export(deriveDS)
 export(deriveERT)
+export(deriveImgnDOTPROBE)
+export(deriveImgnIDENT)
 export(deriveKIRBY)
 export(deriveMID)
+export(derivePALP)
 export(deriveSOCRATIS)
 export(deriveSST)
 export(deriveTMT)
 export(deriveWCST)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
-importFrom(car,recode)
-importFrom(reshape2,dcast)
+export(sanityCheck)
+export(selectIteration)
+importFrom(car,data.table)
+importFrom(data.table,)
+importFrom(data.table,dcast)
