Removed dependency on car package cleaned up Roxygen tags

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,8 +4,21 @@ export(deriveBART)
 export(deriveCORSI)
 export(deriveDS)
 export(deriveERT)
+export(deriveImgnADRS)
+export(deriveImgnAUDIT)
+export(deriveImgnCIS)
+export(deriveImgnCTS)
 export(deriveImgnDOTPROBE)
+export(deriveImgnESPAD)
+export(deriveImgnGEN)
 export(deriveImgnIDENT)
+export(deriveImgnIRI)
+export(deriveImgnMAST)
+export(deriveImgnNEO)
+export(deriveImgnPDS)
+export(deriveImgnReliability)
+export(deriveImgnSURPS)
+export(deriveImgnTCI)
 export(deriveKIRBY)
 export(deriveMID)
 export(derivePALP)
@@ -15,8 +28,7 @@ export(deriveTMT)
 export(deriveWCST)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
-export(sanityCheck)
 export(selectIteration)
-importFrom(car,data.table)
-importFrom(data.table,)
 importFrom(data.table,dcast)
+importFrom(data.table,setDF)
+importFrom(data.table,setDT)
