Removed DESCRIPTION dependency on car and reshape2

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,6 +13,5 @@ Maintainer: John Rogers <github@delosis.com>
 URL: https://github.com/delosis/psytools
 License: GPL-3
 Imports:
-    car,
-    reshape2
+    data.table 
 RoxygenNote: 6.0.1
