Fixed Namespace by redocumenting - sorry!

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -30,5 +30,6 @@ export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
 export(selectIteration)
 importFrom(data.table,dcast)
+importFrom(data.table,set)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
