--- a/NAMESPACE
+++ b/NAMESPACE
@@ -49,3 +49,4 @@ importFrom(data.table,set)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
 importFrom(data.table,setnames)
+importFrom(data.table,setorder)
