missing import discovered during clean testing

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -50,3 +50,4 @@ importFrom(data.table,setDF)
 importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(data.table,setorder)
+importFrom(data.table,shift)
