Added BNU study to Psytools Derive

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,6 +7,16 @@ export(deriveAPQ)
 export(deriveASSIST)
 export(deriveBART)
 export(deriveBIG5)
+export(deriveBnuBISBAS)
+export(deriveBnuCOPE)
+export(deriveBnuCWB)
+export(deriveBnuER)
+export(deriveBnuLS)
+export(deriveBnuMW70)
+export(deriveBnuOCD)
+export(deriveBnuPDS)
+export(deriveBnuSC)
+export(deriveBnuSimpleSum)
 export(deriveCORSI)
 export(deriveCvedaACEIQ)
 export(deriveCvedaAnthropometry)
@@ -15,6 +25,7 @@ export(deriveCvedaSDIM)
 export(deriveDS)
 export(deriveERT)
 export(deriveIFVCS)
+export(deriveIPIP20)
 export(deriveImgnADRS)
 export(deriveImgnAUDIT)
 export(deriveImgnCIS)
@@ -28,9 +39,9 @@ export(deriveImgnMAST)
 export(deriveImgnNEO)
 export(deriveImgnPDS)
 export(deriveImgnReliability)
-export(deriveImgnSURPS)
 export(deriveImgnTCI)
 export(deriveKIRBY)
+export(deriveLEQ)
 export(deriveMID)
 export(derivePALP)
 export(derivePBI)
@@ -38,13 +49,17 @@ export(deriveSCQ)
 export(deriveSDQ)
 export(deriveSOCRATIS)
 export(deriveSST)
+export(deriveSURPS)
 export(deriveTMT)
 export(deriveWCST)
+export(downloadSingleDataFile)
 export(recodeVariables)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
 export(selectIteration)
+importFrom(askpass,askpass)
 importFrom(data.table,dcast)
+importFrom(data.table,fread)
 importFrom(data.table,set)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
