--- a/NAMESPACE
+++ b/NAMESPACE
@@ -11,12 +11,10 @@ export(deriveBnuBISBAS)
 export(deriveBnuCOPE)
 export(deriveBnuCWB)
 export(deriveBnuER)
-export(deriveBnuLS)
 export(deriveBnuMW70)
 export(deriveBnuOCD)
 export(deriveBnuPDS)
 export(deriveBnuSC)
-export(deriveBnuSimpleSum)
 export(deriveCORSI)
 export(deriveCvedaACEIQ)
 export(deriveCvedaAnthropometry)
@@ -50,6 +48,7 @@ export(deriveSDQ)
 export(deriveSOCRATIS)
 export(deriveSST)
 export(deriveSURPS)
+export(deriveSimpleSum)
 export(deriveTMT)
 export(deriveWCST)
 export(downloadSingleDataFile)
