Small fix and changes for Imagen
deriveImgnSURPS() -> deriveSURPS()
deriveImgn...() -> deriveImagen...()

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -24,20 +24,20 @@ export(deriveDS)
 export(deriveERT)
 export(deriveIFVCS)
 export(deriveIPIP20)
-export(deriveImgnADRS)
-export(deriveImgnAUDIT)
-export(deriveImgnCIS)
-export(deriveImgnCTS)
-export(deriveImgnDOTPROBE)
-export(deriveImgnESPAD)
-export(deriveImgnGEN)
-export(deriveImgnIDENT)
-export(deriveImgnIRI)
-export(deriveImgnMAST)
-export(deriveImgnNEO)
-export(deriveImgnPDS)
-export(deriveImgnReliability)
-export(deriveImgnTCI)
+export(deriveImagenADRS)
+export(deriveImagenAUDIT)
+export(deriveImagenCIS)
+export(deriveImagenCTS)
+export(deriveImagenDOTPROBE)
+export(deriveImagenESPAD)
+export(deriveImagenGEN)
+export(deriveImagenIDENT)
+export(deriveImagenIRI)
+export(deriveImagenMAST)
+export(deriveImagenNEO)
+export(deriveImagenPDS)
+export(deriveImagenReliability)
+export(deriveImagenTCI)
 export(deriveKIRBY)
 export(deriveLEQ)
 export(deriveMID)
