--- a/NAMESPACE
+++ b/NAMESPACE
@@ -56,6 +56,7 @@ export(recodeVariables)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
 export(selectIteration)
+import(R.utils)
 importFrom(askpass,askpass)
 importFrom(data.table,dcast)
 importFrom(data.table,fread)
