--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -14,5 +14,6 @@ URL: https://github.com/delosis/psytools
 License: GPL-3
 Imports:
     askpass,
-    data.table (>= 1.12.0)
+    data.table (>= 1.12.0),
+    R.utils
 RoxygenNote: 6.1.1
