--- a/NAMESPACE
+++ b/NAMESPACE
@@ -7,10 +7,12 @@ export(deriveAPQ)
 export(deriveASSIST)
 export(deriveBART)
 export(deriveBIG5)
+export(deriveBnuBG)
 export(deriveBnuBISBAS)
 export(deriveBnuCOPE)
 export(deriveBnuCWB)
 export(deriveBnuER)
+export(deriveBnuMS)
 export(deriveBnuMW70)
 export(deriveBnuOCD)
 export(deriveBnuPDS)
