--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(applyCvedaCustomMissings)
 export(categoriseCvedaReligionLanguageCaste)
+export(convertFU3toFU2)
 export(deriveAAQ)
 export(deriveAPQ)
 export(deriveASSIST)
@@ -54,6 +55,7 @@ export(deriveSimpleSum)
 export(deriveTMT)
 export(deriveWCST)
 export(downloadSingleDataFile)
+export(labelData)
 export(recodeVariables)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
@@ -68,3 +70,5 @@ importFrom(data.table,setDT)
 importFrom(data.table,setnames)
 importFrom(data.table,setorder)
 importFrom(data.table,shift)
+importFrom(haven,labelled_spss)
+importFrom(labelled,var_label)
