Added functions to support converting FU3 format data (wide) into FU2 format data and split by FU2 era task ( the FU3 tasks are all in 2 wide files )
Additionally modified some derivation functions to deal with both FU2 and FU3 data successfully

Added the TCI3 which is complicated by the fact that at FU2 there was an alternate set of questions for the German locale - this was corrected in FU3 where all locales have the same questions - but it seems that actually the German locale was as it should have been at FU2 and so the number of derived variables are limited

Renamed the CIS derivation function to CSI - processing functions calling this will need to be updated

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,6 +2,7 @@
 
 export(applyCvedaCustomMissings)
 export(categoriseCvedaReligionLanguageCaste)
+export(convertFU3toFU2)
 export(deriveAAQ)
 export(deriveAPQ)
 export(deriveASSIST)
@@ -28,7 +29,7 @@ export(deriveIFVCS)
 export(deriveIPIP20)
 export(deriveImagenADRS)
 export(deriveImagenAUDIT)
-export(deriveImagenCIS)
+export(deriveImagenCSI)
 export(deriveImagenCTS)
 export(deriveImagenDOTPROBE)
 export(deriveImagenESPAD)
