Fix to Man files broken in last check in

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ export(deriveImagenNEO)
 export(deriveImagenPDS)
 export(deriveImagenReliability)
 export(deriveImagenTCI)
+export(deriveImagenTCI3)
 export(deriveKIRBY)
 export(deriveLEQ)
 export(deriveMID)
@@ -67,6 +68,7 @@ importFrom(data.table,fread)
 importFrom(data.table,set)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
+importFrom(data.table,setcolorder)
 importFrom(data.table,setnames)
 importFrom(data.table,setorder)
 importFrom(data.table,shift)
