deriveImagenTCI requires rbindlist

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,6 +65,7 @@ import(R.utils)
 importFrom(askpass,askpass)
 importFrom(data.table,dcast)
 importFrom(data.table,fread)
+importFrom(data.table,rbindlist)
 importFrom(data.table,set)
 importFrom(data.table,setDF)
 importFrom(data.table,setDT)
