Added SRS, SPSRQ as new derivations fixed some errors in the BNU scripts also

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -18,6 +18,7 @@ export(deriveBnuMW70)
 export(deriveBnuOCD)
 export(deriveBnuPDS)
 export(deriveBnuSC)
+export(deriveBnuSPSRQ)
 export(deriveCORSI)
 export(deriveCvedaACEIQ)
 export(deriveCvedaAnthropometry)
@@ -50,6 +51,7 @@ export(derivePBI)
 export(deriveSCQ)
 export(deriveSDQ)
 export(deriveSOCRATIS)
+export(deriveSRS)
 export(deriveSST)
 export(deriveSURPS)
 export(deriveSimpleSum)
