Finally fixed the haven update breaking the recoding
Also some reformatted by tidy_source - not sure I like it - will look into other options.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,4 +76,6 @@ importFrom(data.table,setnames)
 importFrom(data.table,setorder)
 importFrom(data.table,shift)
 importFrom(haven,labelled_spss)
+importFrom(haven,zap_label)
+importFrom(haven,zap_labels)
 importFrom(labelled,var_label)
