Haven labelling changed in v 2.3.0 the code was updated to maintain compatibility but this breaks compatibility with older version of haven / labelled

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -13,7 +13,7 @@ Maintainer: John Rogers <github@delosis.com>
 URL: https://github.com/delosis/psytools
 License: GPL-3
 Imports:
-    haven,
+    haven (>= 2.3.0),
     labelled,
     askpass,
     data.table (>= 1.10),
