--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,7 @@ export(deriveBnuSPSRQ)
 export(deriveCORSI)
 export(deriveCvedaACEIQ)
 export(deriveCvedaAnthropometry)
+export(deriveCvedaEATQr)
 export(deriveCvedaPDS)
 export(deriveCvedaSDIM)
 export(deriveDS)
