Added the LimeSurvey downloading functions and tidied up the retry to allow no-existent files to be requested without breaking the execution

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,7 +17,9 @@ Imports:
     labelled,
     askpass,
     data.table (>= 1.10),
+    httr,
+    jsonlite,
     R.utils
-RoxygenNote: 7.1.2
+RoxygenNote: 7.2.2
 LazyData: true
 Encoding: UTF-8
