--- a/NAMESPACE
+++ b/NAMESPACE
@@ -59,6 +59,7 @@ export(deriveSimpleSum)
 export(deriveTMT)
 export(deriveWCST)
 export(downloadSingleDataFile)
+export(downloadSurveyData)
 export(labelData)
 export(recodeVariables)
 export(rotateQuestionnaire)
@@ -79,4 +80,7 @@ importFrom(data.table,shift)
 importFrom(haven,labelled_spss)
 importFrom(haven,zap_label)
 importFrom(haven,zap_labels)
+importFrom(httr,POST)
+importFrom(jsonlite,fromJSON)
+importFrom(jsonlite,toJSON)
 importFrom(labelled,var_label)
