--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,8 +65,8 @@ export(recodeVariables)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
 export(selectIteration)
-import(R.utils)
 importFrom(askpass,askpass)
+importFrom(base64enc,base64decode)
 importFrom(data.table,dcast)
 importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
