--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -16,10 +16,10 @@ Imports:
     haven (>= 2.3.0),
     labelled,
     askpass,
-    data.table (>= 1.10),
+    data.table (>= 1.12),
     httr,
     jsonlite,
-    R.utils
-RoxygenNote: 7.2.2
+    base64enc
+RoxygenNote: 7.2.3
 LazyData: true
 Encoding: UTF-8
