--- a/NAMESPACE
+++ b/NAMESPACE
@@ -65,8 +65,8 @@ export(recodeVariables)
 export(rotateQuestionnaire)
 export(rotateQuestionnairePreserveBlock)
 export(selectIteration)
+import(R.utils)
 importFrom(askpass,askpass)
-importFrom(base64enc,base64decode)
 importFrom(data.table,dcast)
 importFrom(data.table,fread)
 importFrom(data.table,rbindlist)
@@ -81,6 +81,7 @@ importFrom(haven,labelled_spss)
 importFrom(haven,zap_label)
 importFrom(haven,zap_labels)
 importFrom(httr,POST)
+importFrom(httr,content_type_json)
 importFrom(jsonlite,fromJSON)
 importFrom(jsonlite,toJSON)
 importFrom(labelled,var_label)
